--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,7 +9,9 @@
     "build": "tsc -p tsconfig.json",
     "start": "node dist/server.js",
     "typecheck": "tsc -p tsconfig.json --noEmit",
-    "seed:admin": "tsx src/scripts/seedAdmin.ts"
+    "seed:admin": "tsx src/scripts/seedAdmin.ts",
+    "seed:categories": "tsx src/scripts/seedCategories.ts"
+
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
